# awesome-house-style

./: .env.prod.sample  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
carts/: admin.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py
carts/tests/: test_admin.py  test_models.py  test_views.py
goods/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_review.py  0004_favoriteproduct.py  0005_rating.py
goods/templatetags/: goods_tags.py
goods/tests/: test_admin.py  test_catalog_views.py  test_category_views.py  test_favorite_views.py  test_forms.py  test_models.py  test_product_views.py  test_rating_views.py  test_review_views.py  test_views.py
main/: tests.py  views.py
main/templates/: index.html
nginx/: nginx.conf
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_paid_amount_order_session_id_order_session_url_and_more.py
orders/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
store_service/: asgi.py  settings.py  urls.py  views.py  wsgi.py
subscribe/: forms.py  views.py
subscribe/migrations/: 0001_initial.py
subscribe/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
templates/: 404.html  500.html  base.html
templates/includes/: cart_button.html  navbar.html  notifications.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0003_add_user.py  (+2 more)
(+31 files in other folders)
