[tool.poetry]
name = "awesome-house-style"
version = "0.1.0"
description = "This is my awesome house style project written on Django"
authors = ["Viktor Beniukh <superbigbenjamin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
phonenumbers = "^8.13.27"
django-phonenumber-field = "^7.2.0"
stripe = "^7.11.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
